# otus-cpp-pro-project-work

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: messenger.cpp  p2p_chat.cpp  p2p_error.cpp  p2p_error.h
src/app/: p2p_chat.cpp  p2p_chat.h
src/net/: client_socket.cpp  client_socket.h  net_api.cpp  net_api.h  raii_socket.cpp  raii_socket.h  server_socket.cpp  server_socket.h
src/protocol/: message.hpp  protocol_api.cpp  protocol_api.h  serializer.cpp  serializer.h
src/utils/: p2p_error.cpp  p2p_error.h
test/: gtest_messenger.cpp
